# FilmRust-Studio

./: .gitignore  Cargo.toml  README.md  build.rs  clippy_errors.txt  film_style_cli.py  使用说明.txt  公众号文章_FilmRust_v6.4.md
_backup/20260623_195542/: PLAN_v6.0_方案C_完整方案.md
backup_v7.0/: Cargo.toml
backup_v7.0/src/: custom_presets.rs  layers.rs  main.rs
ps_scripts/: FilmRust_Studio.jsx
src/: custom_presets.rs  layers.rs  lib.rs  main.rs  presets.rs  ps_jsx.rs
备份_v6.4_胶片基底版/ps_scripts/: 02_CineStill800T_电影感.jsx  FilmRust_Studio.jsx  install_to_ps.bat
备份_v6.4_胶片基底版/src/: cli.rs  presets.rs  ps_jsx.rs
源码开发文档_FilmRust_v4.0/: Mac移植指南.txt
源码开发文档_FilmRust_v4.0/.cargo/: config.toml
源码开发文档_FilmRust_v4.0/ps_scripts/: 01_Portra400_人像.jsx  03_Velvia50_鲜艳风景.jsx  05_Portra400Artistic_暖调.jsx  FilmRust_Studio.jsx  FilmRust_Studio_Panel.jsx
源码开发文档_FilmRust_v4.0/src/: lib.rs  main.rs
源码开发文档_FilmRust_v4.1/: Cargo.toml
源码开发文档_FilmRust_v4.1/ps_scripts/: 04_TriX400_黑白纪实.jsx  快速拖拽处理.bat
源码开发文档_FilmRust_v4.1/src/: lib.rs  main.rs
源码开发文档_FilmRust_v5.5/: 使用说明.txt  使用说明_v5.9.txt  快速拖拽处理.bat
源码开发文档_FilmRust_v5.5/ps_scripts/: FilmRust_Studio.jsx  胶片调色.jsx
源码开发文档_FilmRust_v5.5/src/: layers.rs  lib.rs  main.rs  presets.rs
源码开发文档_FilmRust_v6.4/: build.rs  install_to_ps.bat  resources.rc
源码开发文档_FilmRust_v6.4/ps_scripts/: 胶片调色.jsx
源码开发文档_FilmRust_v6.4/src/: layers.rs  lib.rs
源码开发文档_FilmRust_v7.3/: Mac适配代码.txt  源码开发文档_v7.3.txt
真实胶片调色工具_FilmRust_v4.0_Windows/: 使用说明_v5.9.txt  胶片调色.jsx
真实胶片调色工具_FilmRust_v4.0_Windows/照片转胶片色V6.4 win版/: 使用说明_v6.4.txt
(+7 files in other folders)
